--- a/.emmyrc.json
+++ b/.emmyrc.json
@@ -1,4 +1,9 @@
 {
+
+ "$schema": "https://raw.githubusercontent.com/EmmyLuaLs/emmylua-analyzer-rust/refs/heads/main/crates/emmylua_code_analysis/resources/schema.json",
+  "format": {
+      "max_line_length": "200"
+  },
   "runtime": {
     "version": "LuaJIT",
     "requirePattern": [
